--- a/production.ini
+++ b/production.ini
@@ -20,7 +20,7 @@ use = egg:PasteDeploy#prefix
 [pipeline:main]
 pipeline =
     paste_prefix
-    demoapp
+    learning_journal
 
 [server:main]
 use = egg:waitress#main
