--- a/production.ini
+++ b/production.ini
@@ -3,7 +3,7 @@
 # http://docs.pylonsproject.org/projects/pyramid/en/1.7-branch/narr/environment.html
 ###
 
-[app:main]
+[app:mainapp]
 use = egg:learning_journal
 
 pyramid.reload_templates = false
