--- a/production.ini
+++ b/production.ini
@@ -23,7 +23,7 @@ pipeline =
     learning_journal
 
 [server:main]
-use = egg:waitress#main
+use = egg:waitress#mainapp
 host = 0.0.0.0
 port = 6543
 
