postgres works. ENV variable problems

--- a/production.ini
+++ b/production.ini
@@ -3,7 +3,7 @@
 # http://docs.pylonsproject.org/projects/pyramid/en/1.7-branch/narr/environment.html
 ###
 
-[app:mainapp]
+[app:main]
 use = egg:learning_journal
 
 pyramid.reload_templates = false
@@ -12,18 +12,20 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
-sqlalchemy.url = sqlite:///%(here)s/learning_journal.sqlite
+sqlalchemy.url = postgres:///learning_journal
 
 [filter:paste_prefix]
 use = egg:PasteDeploy#prefix
 
-[pipeline:main]
-pipeline =
-    paste_prefix
-    learning_journal
+###
+#[pipeline:main]
+#pipeline =
+#    paste_prefix
+#    learning_journal
+###
 
 [server:main]
-use = egg:waitress#mainapp
+use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
 
