--- a/development.ini
+++ b/development.ini
@@ -14,7 +14,8 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = postgres://<Your Username Here>@localhost:5432/learning_journal
+#sqlalchemy.url = postgres://kaorti@localhost:5432/learning_journal
+sqlalchemy.url = postgres:///learning_journal
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
